@@ -65,7 +65,7 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-  <version>1.0.9</version>
+      <version>1.0.9</version>
     </dependency>
 
     <dependency>
@@ -75,4 +75,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.9</version>
+          <configuration>
+            <argLine>-Xmx4G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled</argLine>
+<!--             <argLine>-Xmx4G</argLine> -->
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
